# launchd-plist.py

./: README.md  setup.cfg
tests/launchd_plist/examples/: KEYS.py  data.py  subclass.py
