# https://pypi.org/project/setupcfg-generator/
[metadata]
name = launchd-plist
version = 2019.03.12
url = https://github.com/looking-for-a-job/launchd-plist.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = launchd

[options]
install_requires = 
	public
	setuptools
packages = 
	launchd_plist
